tests/integration/snapshots/main__integration__short_chaining__error_unknown_in_chain.snap
---
source: tests/integration/short_chaining.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: unknown flag: -x
   ╭─[ <cli>:1:1 ]
   │
 1 │ -axc
   │ ──┬─  
   │   ╰─── unknown flag: -x
───╯
